--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <label for="postalcode">Postal Code</label> <br>
         <input size="5" maxlength="7" name="postalcode" type="postal" placeholder="A1A 1A1" autocomplete="on" required> <br>
-        <textarea id="textbox" name="textbox" rows="3" cols="50" placeholder="Questions or comments?" required></textarea> <br>
+        <textarea maxlength="300" id="textbox" name="textbox" rows="3" cols="50" placeholder="Questions or comments?" required></textarea> <br>
         
         <input name="topic" id="question" type="radio" required>
         <label for="question">Question?</label><br>
